--- a/css/bord.scss
+++ b/css/bord.scss
@@ -6,11 +6,21 @@
     z-index: -1;
     content: "";
     position: absolute;
-    background: url("../img/bec1.jpg") 0 0 / cover no-repeat;
+    background: url("../img/bec1.jpg") 0 -100px / cover no-repeat;
     top: 0;
     right: 0;
     width: 50%;
     height: 80%;
+  }
+  &::after {
+    z-index: -2;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: $mint;
   }
   &__container {
   }
@@ -18,7 +28,7 @@
   // .bord__body
 
   &__body {
-    width: 50%;
+    width: 48%;
   }
 
   // .bord__subtitle
@@ -34,11 +44,17 @@
   // .bord__title
 
   &__title {
+    font-size: 48px;
+    line-height: 53px;
+    letter-spacing: -0.035em;
   }
 
   // .bord__text
 
   &__text {
+    font-size: 24px;
+    line-height: 42px;
+    font-weight: normal;
   }
 
   // .bord__buttons
@@ -49,13 +65,23 @@
   // .bord__btn
 
   &__btn {
+    color: $orange;
     height: 50px;
     line-height: 50px;
     font-size: 16px;
     font-weight: bold;
+    letter-spacing: 0.1em;
     text-transform: uppercase;
-    background-color: $orange;
+    background-color: transparent;
     padding: 10px 30px;
     margin: 0px 30px 0px 0px;
+    transition: all 0.3s cubic-bezier(0.45, 0.05, 0.55, 0.95);
+    &:hover {
+      background-color: $orange;
+      color: #fff;
+    }
+    &:last-child {
+      margin: 0;
+    }
   }
 }
