--- a/css/main.css
+++ b/css/main.css
@@ -394,7 +394,7 @@ body {
 
 .container {
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 15px;
   max-width: 1090px;
 }
 
@@ -635,6 +635,33 @@ body {
   .why__image {
     flex: 0 0 calc( 50vw - (0.7 - 0.5) * (1160px - 30px) );
   }
+}
+
+.about {
+  padding: 150px 0px 0px 0px;
+  color: #22356f;
+}
+.about__body {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0px 15px;
+}
+.about .about__elem {
+  flex: 1 0 25%;
+}
+.about__label {
+  padding: 0px 0px 0px 91px;
+  font-size: 16px;
+  line-height: 23px;
+  letter-spacing: 0.06em;
+}
+.about__text {
+  margin: 0;
+  flex: 0 0 592px;
+  font-size: 24px;
+  line-height: 34px;
+  letter-spacing: 0.005em;
 }
 
 @media (max-width: 768px) {
